# DaggyD

./: .daggyd.py.~undo-tree~  .gitignore  README.md  daggyd.py  pyproject.toml  setup.py
DagBi/: __init__.py  channels.py  main.py
DaggyD/: DaggyD.py  __init__.py  example.py  hybrid.py  main.py  petri_net.py  pregel_core.py
example_outputs/: 01_producer_consumer_analysis.txt  01_producer_consumer_model.json  01_producer_consumer_reachability.dot  01_producer_consumer_structure.dot  02_dining_philosophers_analysis.txt  02_dining_philosophers_model.json  02_dining_philosophers_reachability.dot  02_dining_philosophers_structure.dot  03_mutex_inhibitor_analysis.txt  03_mutex_inhibitor_model.json  03_mutex_inhibitor_reachability.dot  03_mutex_inhibitor_structure.dot  04_fork_join_workflow_analysis.txt  04_fork_join_workflow_model.json  04_fork_join_workflow_reachability.dot  04_fork_join_workflow_structure.dot  05_resource_pool_analysis.txt  05_resource_pool_model.json  05_resource_pool_reachability.dot  05_resource_pool_structure.dot  06_deadlock_detection_analysis.txt  06_deadlock_detection_model.json  06_deadlock_detection_reachability.dot  06_deadlock_detection_structure.dot  07_dining_philosophers_deadlock_analysis.txt  07_dining_philosophers_deadlock_model.json  07_dining_philosophers_deadlock_reachability.dot  07_dining_philosophers_deadlock_structure.dot  07_weighted_arcs_model.json  07_weighted_arcs_structure.dot  08_priority_reachability.dot  08_weighted_arcs_analysis.txt  08_weighted_arcs_reachability.dot  09_pagerank_dataflow.dot  09_pagerank_graph.dot  09_priority_analysis.txt  09_priority_model.json  09_priority_structure.dot  (+6 more)
(+15 files in other folders)
